# Kind

./: Cargo.toml
base/App/: Capy.kind  Quadrado.kind
base/App/GG/: Anatomy.kind  Dna.kind  Tech.kind  init.kind
base/App/GG/Chip/Arms/: bazooka.kind  burrow_prey.kind  cannon.kind  long_sword.kind  quick_strike.kind  recursive_gun.kind  shockwave.kind
base/App/GG/Chip/Hull/: acid_steps.kind  blob_shield.kind  damage_chase.kind  slime_jump.kind
base/App/GG/Chip/Lower/: attack_position.kind  riposte.kind
base/App/GG/Chip/Upper/: acid_rain.kind  (+1 more)
base/App/GG/Creatures/: turret.kind
base/App/GG/Effect/: ai.kind  animation.kind  basic_attack.kind  movement.kind  stun.kind  vbox.kind
base/App/GG/Tech/: change.md
base/App/Quadrado/: Cooldown.kind  Coord.kind  Creature.kind  Minion.kind  Movement.kind  Physics.kind  Status.kind  draw.kind  frame.kind  init.kind  when.kind
crates/kind-cli/: Cargo.toml
crates/kind-cli/src/: io_write.rs  main.rs  watch.rs
crates/kind-driver/: Cargo.toml
crates/kind-driver/src/: resolution.rs  session.rs
crates/kind-lsp/: Cargo.toml
crates/kind-lsp/src/: main.rs
crates/kind-parser/src/: lib.rs
crates/kind-parser/src/top_level/: mod.rs
crates/kind-pass/src/expand/: uses.rs
crates/kind-pass/src/unbound/: mod.rs
crates/kind-query/: Cargo.toml
crates/kind-query/src/: diagnostic.rs  lib.rs
crates/kind-report/src/: data.rs  report.rs
crates/kind-tests/benches/: pure.rs
crates/kind-tree/src/: symbol.rs
crates/kind-tree/src/concrete/: mod.rs
graph/: B.kind2  D.kind2  E.kind2  F.kind2  FF.kind2  Main.kind2
(+37 files in other folders)
