[package]
name = "kind2"
version = "0.3.4"
edition = "2021"
description = "A pure functional functional language that uses the HVM."
repository = "https://github.com/Kindelia/Kind2"
license = "MIT"
keywords = ["functional", "language", "type-theory", "proof-assistant"]

[[bin]]
name = "kind2"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-driver  = { path = "../kind-driver" }
kind-report  = { path = "../kind-report" }
kind-checker = { path = "../kind-checker" }
kind-query = { path = "../kind-query" }

clap = { version = "4.0.10", features = ["derive"] }
notify = "5.0.0"
anyhow = "1.0.66"
notify-debouncer-mini = "*"
pathdiff = "0.2.1"

tokio = { version = "*", features = ["rt", "sync", "macros", "rt-multi-thread"] }
futures = "*"
async-trait = "0.1.60"